[package]
name = "graphql-http"
description = "A reqwest based GraphQL-over-HTTP client"
version = "0.2.1"
edition = "2021"
rust-version = "1.63.0"

[features]
http-reqwest = ["dep:async-trait", "dep:reqwest"]
compat-graphql-client = ["dep:graphql_client"]
compat-graphql-parser = ["dep:graphql-parser"]
compat-async-graphql = ["dep:async-graphql"]

[dependencies]
anyhow = "1.0"
async-graphql = { version = "7.0", optional = true }
async-trait = { version = "0.1", optional = true }
graphql-parser = { version = "0.4", optional = true }
graphql_client = { version = "0.13", optional = true }
reqwest = { version = "0.11", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
assert_matches = "1.5.0"
indoc = "2.0.4"
tokio = { version = "1.35", features = ["rt", "macros", "time"] }
