[package]
name = "graphql"
description = "A collection of GraphQL related Rust modules that are share between The Graph's network services"
version = "0.3.0"
edition.workspace = true
license.workspace = true
publish = false
rust-version = "1.86"

[dependencies]
firestorm = "0.5"
graphql-parser = "0.4"
serde = { version = "1.0", features = ["derive"] }
