[package]
name = "thegraph-client-subgraphs"
description = "A client for The Graph network's Subgraphs data service"
version = "0.3.1"
repository = "https://github.com/edgeandnode/toolshed"
authors = ["Lorenzo Delgado (LNSD) <lorenzo@edgeandnode.com>"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
indoc = "2.0.5"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = { version = "1.0.132", features = ["raw_value"] }
thegraph-core = { version = "0.15", path = "../thegraph-core", features = ["serde"] }
thegraph-graphql-http = { version = "0.4.0", path = "../thegraph-graphql-http", features = ["reqwest"] }
thiserror = "2.0.1"
tracing = { version = "0.1.40", default-features = false, features = ["attributes"] }
url = "2.5.3"

[dev-dependencies]
test-with = { version = "0.15.0", default-features = false }
tokio = { version = "1.41.1", features = ["macros", "rt"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
