[package]
name = "thegraph-core"
description = "Rust core modules for The Graph network"
version = "0.9.1"
repository = "https://github.com/edgeandnode/toolshed"
authors = ["Lorenzo Delgado (LNSD) <lorenzo@edgeandnode.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.79.0"

[features]
default = []
attestation = ["alloy-eip712", "alloy-signers", "alloy-sol-types"]
alloy-contract = ["alloy/contract"]
alloy-eip712 = ["alloy/eip712"]
alloy-full = ["alloy/full"]
alloy-rlp = ["alloy/rlp"]
alloy-signer-local = ["alloy/signer-local"]
alloy-signers = ["alloy/signers"]
alloy-sol-types = ["alloy/sol-types"]
async-graphql = ["dep:async-graphql"]
fake = ["dep:fake"]
headers = [
    "dep:headers",
    # Required by headers::graph_attestation
    "alloy/serde", "dep:serde", "dep:serde_json",
]
serde = ["dep:serde", "dep:serde_with", "alloy/serde"]

[dependencies]
alloy = "0.7"
async-graphql = { version = "7.0", optional = true }
bs58 = "0.5"
fake = { version = "3.0", optional = true }
headers = { version = "0.4.0", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0.133", optional = true }
serde_with = { version = "3.8", optional = true }
thiserror = "1.0"

[dev-dependencies]
alloy = { version = "0.7", features = ["signer-local"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
