[package]
name = "thegraph-core"
description = "Rust core modules for The Graph network"
version = "0.15.1"
repository = "https://github.com/edgeandnode/toolshed"
authors = ["Lorenzo Delgado (LNSD) <lorenzo@edgeandnode.com>"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = []
attestation = ["alloy-eip712", "alloy-signers", "alloy-sol-types"]
alloy-contract = ["alloy/contract"]
alloy-dyn-abi = ["alloy/dyn-abi"]
alloy-eip712 = ["alloy/eip712"]
alloy-full = ["alloy/full"]
alloy-kzg = ["alloy/kzg"]
alloy-rlp = ["alloy/rlp"]
alloy-signer-local = ["alloy/signer-local"]
alloy-signer-mnemonic = ["alloy/signer-mnemonic"]
alloy-signer-mnemonic-all-languages = ["alloy/signer-mnemonic-all-languages"]
alloy-signers = ["alloy/signers"]
alloy-sol-types = ["alloy/sol-types"]
async-graphql = ["dep:async-graphql"]
fake = ["dep:fake"]
serde = ["dep:serde", "dep:serde_with", "alloy/serde"]
signed-message = ["alloy-eip712", "alloy-signers", "alloy-sol-types"]

[dependencies]
alloy = "1.0"
async-graphql = { version = "7.0", optional = true }
bs58 = "0.5"
fake = { version = "4.0", optional = true }
serde = { version = "1.0", optional = true }
serde_with = { version = "3.8", optional = true }
thiserror = "2.0"

[dev-dependencies]
alloy = { version = "1.0", features = ["signer-local"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
