[package]
name = "thegraph-graphql-http"
description = "A rust implementation of the GraphQL-over-HTTP spec for The Graph network services"
version = "0.4.1"
repository = "https://github.com/edgeandnode/toolshed"
authors = ["Lorenzo Delgado (LNSD) <lorenzo@edgeandnode.com>"]
license.workspace = true
edition.workspace = true
rust-version = "1.86"

[features]
reqwest = ["dep:async-trait", "dep:reqwest"]
graphql-client = ["dep:graphql_client"]
graphql-parser = ["dep:graphql-parser"]
async-graphql = ["dep:async-graphql"]

[dependencies]
async-graphql = { version = "7.0", optional = true }
async-trait = { version = "0.1", optional = true }
graphql-parser = { version = "0.4", optional = true }
graphql_client = { version = "0.14", optional = true }
reqwest = { version = "0.12", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
assert_matches = "1.5.0"
indoc = "2.0.5"
tokio = { version = "1.37.0", features = ["rt", "macros", "time"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
