[package]
name = "thegraph-headers"
version = "0.1.0"
edition = "2021"

[features]
attestation = ["thegraph-core/attestation"]

[dependencies]
headers = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thegraph-core = { version = "0.9.0", path = "../thegraph-core", features = ["serde"] }

[dev-dependencies]
fake = "3.0.1"
thegraph-core = { path = "../thegraph-core", features = ["fake"] }
