[package]
name = "thegraph-headers"
description = "Common HTTP headers for _The Graph_ network services"
version = "0.1.3"
repository = "https://github.com/edgeandnode/toolshed"
authors = ["Lorenzo Delgado (LNSD) <lorenzo@edgeandnode.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.81.0"

[features]
attestation = ["thegraph-core/attestation"]

[dependencies]
headers = "0.4"
http = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thegraph-core = { version = "0.10", path = "../thegraph-core", features = ["serde"] }

[dev-dependencies]
fake = "3.0.1"
thegraph-core = { path = "../thegraph-core", features = ["fake"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
