[package]
name = "thegraph"
description = "A collection of Rust modules that are shared between The Graph's network services"
version = "0.1.1"
edition = "2021"
rust-version = "1.67.1"

[features]
subgraph-client = ["dep:tracing", "dep:indoc", "dep:serde_json", "toolshed/url", "dep:reqwest", "graphql-http/http-reqwest"]

[dependencies]
alloy-primitives = { version = "0.5.0", features = ["serde"] }
alloy-sol-types = "0.5.1"
async-graphql = "6.0.11"
bs58 = "0.5.0"
ethers-core = { version = "2.0.11", default-features = false }
graphql-http = { git = "https://github.com/edgeandnode/toolshed.git", tag = "graphql-http-v0.1.1", optional = true }
indoc = { version = "2.0.4", optional = true }
reqwest = { version = "0.11.22", optional = true }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108", optional = true, features = ["raw_value"] }
serde_with = "3.4.0"
sha3 = "0.10.8"
thiserror = "1.0.50"
toolshed = { git = "https://github.com/edgeandnode/toolshed.git", tag = "v0.4.0", optional = true }
tracing = { version = "0.1.40", optional = true }

[dev-dependencies]
assert_matches = "1.5.0"
test-with = { version = "0.12.1", default-features = false }
tokio = { version = "1.34.0", features = ["macros", "rt"] }
