[package]
name = "thegraph"
description = "A collection of Rust modules that are shared between The Graph's network services"
version = "0.2.0"
edition = "2021"
rust-version = "1.67.1"

[features]
subgraph-client = ["dep:tracing", "dep:indoc", "dep:serde_json", "dep:toolshed", "toolshed/url", "dep:reqwest", "dep:graphql-http", "graphql-http/http-reqwest"]
subscriptions = ["dep:base64", "dep:serde_cbor_2", "dep:alloy-chains", "dep:ethers"]

[dependencies]
alloy-chains = { version = "0.1", features = ["serde"], optional = true }
alloy-primitives = { version = "0.5", features = ["serde"] }
alloy-sol-types = "0.5"
async-graphql = "6.0"
base64 = { version = "0.21", optional = true }
bs58 = "0.5"
ethers = { version = "2.0", default-features = false, optional = true }
ethers-core = { version = "2.0", default-features = false }
graphql-http = { git = "https://github.com/edgeandnode/toolshed.git", tag = "graphql-http-v0.1.1", optional = true }
indoc = { version = "2.0", optional = true }
lazy_static = "1.4"
reqwest = { version = "0.11", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_cbor_2 = { version = "0.12.0-dev", optional = true }
serde_json = { version = "1.0", optional = true, features = ["raw_value"] }
serde_with = "3.4"
sha3 = "0.10"
thiserror = "1.0"
toolshed = { git = "https://github.com/edgeandnode/toolshed.git", tag = "v0.4.0", optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
assert_matches = "1.5.0"
test-with = { version = "0.12.1", default-features = false }
tokio = { version = "1.35.0", features = ["macros", "rt"] }
