[package]
name = "thegraph"
description = "A collection of Rust modules that are shared between The Graph's network services"
version = "0.5.0"
edition = "2021"
rust-version = "1.67.1"

[features]
subgraph-client = [
    "dep:tracing",
    "dep:indoc",
    "dep:serde_json",
    "dep:toolshed",
    "toolshed/url",
    "dep:reqwest",
    "dep:graphql-http",
    "graphql-http/http-reqwest",
]
subscriptions = [
    "dep:base64",
    "dep:serde_cbor_2",
    "dep:alloy-chains",
    "dep:ethers",
]

[dependencies]
alloy-chains = { version = "0.1", features = ["serde"], optional = true }
alloy-primitives = { version = "0.6", features = ["serde"] }
alloy-sol-types = "0.6"
async-graphql = "7.0"
base64 = { version = "0.21", optional = true }
bs58 = "0.5"
ethers = { version = "2.0", default-features = false, optional = true }
ethers-core = { version = "2.0", default-features = false }
graphql-http = { git = "https://github.com/edgeandnode/toolshed.git", tag = "graphql-http-v0.2.1", optional = true }
indoc = { version = "2.0", optional = true }
lazy_static = "1.4"
reqwest = { version = "0.11", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_cbor_2 = { version = "0.12.0-dev", optional = true }
serde_json = { version = "1.0", optional = true, features = ["raw_value"] }
serde_with = "3.6"
sha3 = "0.10"
thiserror = "1.0"
toolshed = { git = "https://github.com/edgeandnode/toolshed.git", tag = "toolshed-v0.5.0", optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
assert_matches = "1.5.0"
test-with = { version = "0.12.4", default-features = false }
tokio = { version = "1.36.0", features = ["macros", "rt"] }
