[package]
name = "toolshed"
description = "A collection of Rust modules that are shared between The Graph's network services"
version = "0.2.2"
edition = "2021"
rust-version = "1.65.0"


[features]
default = ["graphql", "url"]
graphql = ["dep:firestorm", "dep:graphql-parser"]
url = ["dep:url"]

[dependencies]
bs58 = "0.5.0"
alloy-primitives = { version = "0.4.2", features = ["serde"] }
alloy-sol-types = "0.4.2"
ethers-core = { version = "2.0.10", default-features = false }
firestorm = { version = "0.5.1", optional = true }
graphql-parser = { version = "0.4.0", optional = true }
sha3 = "0.10.6"
serde = { version = "1.0.152", features = ["derive"] }
serde_with = "3.2.0"
thiserror = "1.0.50"
url = { version = "2.4.1", optional = true }
async-graphql = "6.0.10"

[dev-dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
