[package]
name = "toolshed"
description = "A collection of Rust modules that are shared between The Graph's network services"
version = "0.4.0"
edition = "2021"
rust-version = "1.65.0"


[features]
default = ["url"]
url = ["dep:url"]

[dependencies]
bs58 = "0.5.0"
alloy-primitives = { version = "0.5.3", features = ["serde"] }
alloy-sol-types = "0.5.3"
ethers-core = { version = "2.0.11", default-features = false }
sha3 = "0.10.8"
serde = { version = "1.0.193", features = ["derive"] }
serde_with = "3.4.0"
thiserror = "1.0.56"
url = { version = "2.5.0", optional = true }
async-graphql = "6.0.11"
tokio = { version = "1.35.1", features = ["sync"] }

[dev-dependencies]
assert_matches = "1.5.0"
